[package]
name = "vaultworn"
version = "0.1.0"
edition = "2021"
description = "Vaultworn - An open-world medieval RPG prototype built with Bevy"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "x11",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "dynamic_linking",
] }

# Optimizations for Bevy
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1